fix: occasional balls overlapping glitch when they collide

--- a/Week 2/Day 4/BallCollision/style.css
+++ b/Week 2/Day 4/BallCollision/style.css
@@ -30,4 +30,5 @@ body {
 .ball {
     position: absolute;
     border-radius: 50%;
+    transform: translate(-50%, -50%);
 }
